[gd_scene load_steps=17 format=3 uid="uid://dw4sgxqhm61cv"]

[ext_resource type="Script" path="res://src/ui/engine_row.gd" id="1_n0b73"]
[ext_resource type="Texture2D" uid="uid://bbfavavfnjtbv" path="res://icon.svg" id="2_a2jq7"]
[ext_resource type="Shader" uid="uid://ck48osohs7wu0" path="res://assest/shader/icon_color.tres" id="3_lbjl2"]
[ext_resource type="Texture2D" uid="uid://c8x2asku6olfm" path="res://assest/icon/ui/play-circle.svg" id="4_yttuj"]
[ext_resource type="Script" path="res://src/ui/ButtonHoverLight.gd" id="5_6l6w3"]
[ext_resource type="Texture2D" uid="uid://c4c3y50jk4e0x" path="res://assest/icon/ui/terminal.svg" id="6_llt8o"]
[ext_resource type="Texture2D" uid="uid://bbco4i4yfh80u" path="res://assest/icon/ui/edit.svg" id="7_5vt55"]
[ext_resource type="Texture2D" uid="uid://c7ku2eye7vga5" path="res://assest/icon/ui/folder-open.svg" id="8_uij07"]
[ext_resource type="Texture2D" uid="uid://gkybuqu7s76l" path="res://assest/icon/ui/key.svg" id="9_kupii"]
[ext_resource type="Texture2D" uid="uid://bhyrtvwe5ogxr" path="res://assest/icon/ui/times-circle.svg" id="10_s4yj3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ianh2"]
resource_local_to_scene = true
shader = ExtResource("3_lbjl2")
shader_parameter/tint_color = Color(0.258824, 0.384314, 0.529412, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1p4rm"]
resource_local_to_scene = true
shader = ExtResource("3_lbjl2")
shader_parameter/tint_color = Color(0.258824, 0.384314, 0.529412, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fsp6x"]
resource_local_to_scene = true
shader = ExtResource("3_lbjl2")
shader_parameter/tint_color = Color(0.258824, 0.384314, 0.529412, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jmwxi"]
resource_local_to_scene = true
shader = ExtResource("3_lbjl2")
shader_parameter/tint_color = Color(0.258824, 0.384314, 0.529412, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7d0kh"]
resource_local_to_scene = true
shader = ExtResource("3_lbjl2")
shader_parameter/tint_color = Color(0.258824, 0.384314, 0.529412, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3dvuo"]
resource_local_to_scene = true
shader = ExtResource("3_lbjl2")
shader_parameter/tint_color = Color(0.258824, 0.384314, 0.529412, 1)

[node name="EngineRow" type="PanelContainer"]
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("1_n0b73")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96.005, 96)
layout_mode = 2
texture = ExtResource("2_a2jq7")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Version 4.0.1 "
autowrap_mode = 3

[node name="Version" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Version 4.0.1 "
horizontal_alignment = 2
autowrap_mode = 3

[node name="Container" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="TagContainer" type="FlowContainer" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/Container"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="Locate" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Locate at : caksjdlkajjkjasdkja"
autowrap_mode = 3

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/HBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 3

[node name="Run" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer3/GridContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ianh2")
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Run Engine"
texture_normal = ExtResource("4_yttuj")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("5_6l6w3")

[node name="Console" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer3/GridContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_1p4rm")
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Run Engine With Console"
texture_normal = ExtResource("6_llt8o")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("5_6l6w3")

[node name="Edit" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer3/GridContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_fsp6x")
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Edit Engine"
texture_normal = ExtResource("7_5vt55")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("5_6l6w3")

[node name="OpenDir" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer3/GridContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_jmwxi")
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Open Engine Directory"
texture_normal = ExtResource("8_uij07")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("5_6l6w3")

[node name="CopyEncryption" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer3/GridContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_7d0kh")
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
texture_normal = ExtResource("9_kupii")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("5_6l6w3")

[node name="Delete" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer3/GridContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_3dvuo")
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Delete Engine"
texture_normal = ExtResource("10_s4yj3")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("5_6l6w3")

[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer3/GridContainer/Run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer3/GridContainer/Console" to="." method="_on_console_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer3/GridContainer/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer3/GridContainer/OpenDir" to="." method="_on_open_dir_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer3/GridContainer/CopyEncryption" to="." method="_on_copy_encryption_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer3/GridContainer/Delete" to="." method="_on_delete_pressed"]
